fixed scroll on firefox and chrome

--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,7 @@ a:hover {
 
 body {
     padding: 0;
+    height: auto;
 }
 
 section {
@@ -53,14 +54,14 @@ section {
 #approche,
 #formation,
 #contact {
-    transition: all 1.5s; 
+    transition: all 1.5s;
     padding: 3%;
 }
 
 #nav {
     -webkit-justify-content: space-between;
     justify-content: space-between;
-    
+
 }
 
 #hero,
@@ -190,7 +191,7 @@ section {
     flex-direction: column;
     -webkit-justify-content: space-around;
     justify-content: space-around;
-    
+
   }
   .hamburger{
     cursor: pointer;
@@ -233,7 +234,7 @@ section {
   .info p{
     font-size: 14px;
   }
-  
+
 }
 
 /* ==========================================================================
@@ -294,7 +295,7 @@ footer a {
     opacity: 1;
   }
 
-  
+
 }
 
 .highlite{
